# cpp_module_04

./: .gitignore  CMakeLists.txt
ex00/: Makefile
ex00/include/: Animal.hpp  Cat.hpp  Dog.hpp  WrongAnimal.hpp  WrongCat.hpp
ex00/src/: Animal.cpp  Cat.cpp  Dog.cpp  WrongAnimal.cpp  WrongCat.cpp  main.cpp
ex01/: Makefile
ex01/include/: Animal.hpp  Brain.hpp  Cat.hpp  Dog.hpp  WrongAnimal.hpp  WrongCat.hpp
ex01/src/: Animal.cpp  Brain.cpp  Cat.cpp  Dog.cpp  WrongAnimal.cpp  main.cpp
ex02/: Makefile
ex02/include/: AbstractAnimal.hpp  Animal.hpp  Brain.hpp  Cat.hpp  Dog.hpp  WrongAnimal.hpp  WrongCat.hpp
ex02/src/: AbstractAnimal.cpp  Animal.cpp  Cat.cpp  Dog.cpp  WrongAnimal.cpp  WrongCat.cpp  main.cpp
